<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="#000000"
                                             tools:context="com.altermovement.www.program01.Converter">
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="@+id/parent"
            app:layout_constraintRight_toRightOf="@+id/parent"
            app:layout_constraintTop_toTopOf="@+id/parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1">

            <TextView
                android:id="@+id/description1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="false"
                android:layout_alignParentTop="false"
                android:layout_marginTop="10dp"
                android:background="@color/blue_overlay"
                android:gravity="center"
                android:shadowColor="#000000"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="5"
                android:text="@string/bpm_conversion_in"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/field1"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_alignParentBottom="false"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="false"
                android:layout_alignParentStart="false"
                android:layout_alignParentTop="false"
                android:layout_alignWithParentIfMissing="false"
                android:layout_below="@+id/description1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/black_overlay"
                android:gravity="center"
                android:hint="@string/enter_bpm_of_track_1"
                android:inputType="numberDecimal"
                android:shadowColor="#000000"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="5"
                android:textColor="#FFFFFF"
                android:textColorHint="#999999"
                android:textSize="30sp"
                tools:ignore="RtlHardcoded"
                tools:layout_editor_absoluteX="139dp"
                tools:layout_editor_absoluteY="16dp" />

            <EditText
                android:id="@+id/field2"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_alignParentRight="false"
                android:layout_below="@+id/field1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/black_overlay"
                android:gravity="center"
                android:hint="@string/enter_bpm_of_track_2"
                android:inputType="numberDecimal"
                android:shadowColor="#000000"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="5"
                android:textColor="#FFFFFF"
                android:textColorHint="#999999"
                android:textSize="30sp"
                tools:ignore="RtlHardcoded"
                tools:layout_editor_absoluteX="139dp"
                tools:layout_editor_absoluteY="83dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/description1"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/change"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/white_overlay"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/convert"
                android:textColor="#006699"
                android:textSize="30sp"
                android:textStyle="bold"
                android:windowSoftInputMode="stateHidden"
                app:layout_constraintRight_toLeftOf="@+id/change"
                tools:layout_editor_absoluteY="146dp" />

            <Button
                android:id="@+id/calc_reset"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/change"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/white_overlay"
                android:gravity="center"
                android:text="@string/reset"
                android:textColor="#006699"
                android:textSize="30sp"
                android:textStyle="bold"
                android:windowSoftInputMode="stateHidden"
                tools:ignore="RtlHardcoded"
                tools:layout_editor_absoluteY="146dp" />

            <TextView
                android:id="@+id/change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="false"
                android:layout_below="@+id/field2"
                android:layout_centerHorizontal="false"
                android:layout_centerInParent="false"
                android:layout_centerVertical="false"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/black_overlay"
                android:gravity="center"
                android:text="@string/pitch"
                android:textColor="#FFFFFF"
                android:textSize="45sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteX="139dp" />

            <TextView
                android:id="@+id/description2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button"
                android:layout_marginTop="10dp"
                android:background="@color/blue_overlay"
                android:gravity="center"
                android:shadowColor="#000000"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="5"
                android:text="@string/tap_button_to_see_bpm1"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="139dp" />

            <TextView
                android:id="@+id/bpm_tap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="false"
                android:layout_below="@+id/description2"
                android:layout_centerHorizontal="false"
                android:layout_centerInParent="false"
                android:layout_centerVertical="false"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/black_overlay"
                android:gravity="center"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/tap"
                android:textColor="#FFFFFF"
                android:textSize="45sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteX="139dp" />

            <Button
                android:id="@+id/tap"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/reset"
                android:layout_alignBottom="@+id/reset"
                android:layout_alignLeft="@+id/bpm_tap"
                android:layout_alignStart="@+id/bpm_tap"
                android:layout_centerInParent="false"
                android:background="@color/white_overlay"
                android:gravity="center"
                android:text="@string/taptap"
                android:textColor="#006699"
                android:textSize="30sp"
                android:textStyle="bold"
                android:windowSoftInputMode="stateHidden"

                app:layout_constraintRight_toLeftOf="@+id/change"/>

            <Button
                android:id="@+id/sendbpm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/bpm_tap"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/white_overlay"
                android:text="Send to BPM1"
                android:textColor="#006699"
                android:textSize="24sp"
                android:textStyle="bold"
                android:windowSoftInputMode="stateHidden" />

            <Button
                android:id="@+id/reset"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/sendbpm"
                android:layout_centerInParent="false"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/white_overlay"
                android:gravity="center"
                android:text="@string/reset1"
                android:textColor="#006699"
                android:textSize="30sp"
                android:textStyle="bold"
                android:windowSoftInputMode="stateHidden"
                app:layout_constraintRight_toLeftOf="@+id/change"
                tools:ignore="RtlHardcoded"
                tools:layout_editor_absoluteY="146dp" />

            <Button
                android:id="@+id/exit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/reset"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/white_overlay"
                android:text="EXIT"
                android:textColor="#006699"
                android:textSize="24sp"
                android:textStyle="bold"
                android:windowSoftInputMode="stateHidden" />

        </RelativeLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
